# head-hunter-app

./: .gitignore  Dockerfile  README.md  alembic.ini  crud.py  db.sqlite3  docker-compose.yml  main.py  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 03b6f7acf7ae_update_user_model.py  0b58894ff3a2_initial.py  0e4e5785d15d_ad_phone.py  1c0b641e36d0_create_user_table.py  26ceba05f6b2_ad_foreignkey_to_resume.py  92b48504fc3d_create_user_table.py  92d75e4f792f_delete_phone.py  af5c552708fc_initial.py  bbecf7a64591_update_user_model.py  da9d22ad7437_crate_database.py  efee0bcc4937_ad_password_to_user_model.py  f70624afcae6_create_profile_table.py  fc7a67c09dab_delete_phone.py
api_v1/: __init__.py
api_v1/auth/: auth.py  manager.py  schemas.py
api_v1/demo_auth/: views.py
api_v1/resume/: crud.py  dependencies.py  schemas.py  views.py
api_v1/users/: crud.py  dependencies.py  schemas.py  views.py
core/: config.py
core/models/: __init__.py  base.py  db_helper.py  mixins.py  profile.py  resume.py  user.py
tasks/: router.py  tasks.py
templates/: main_page.html
tests/: test_auth.py  test_resume.py
