[tool.poetry]
name = "hh-app"
version = "0.1.0"
description = ""
authors = ["Pavel Ryaguzov <pashajobber@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.0"
uvicorn = {extras = ["standard"], version = "^0.26.0"}
pydantic = {extras = ["email"], version = "^2.5.3"}
sqlalchemy = {extras = ["asyncio"], version = "^2.0.25"}
aiosqlite = "^0.19.0"
pydantic-settings = "^2.1.0"
alembic = "^1.13.1"
fastapi-cache2 = {extras = ["redis"], version = "^0.2.1"}
asyncpg = "^0.29.0"
jinja2 = "^3.1.3"
httpx = "^0.26.0"
pytest-asyncio = "^0.23.4"
fastapi-users = {extras = ["sqlalchemy"], version = "^12.1.2"}
bcrypt = "^4.1.2"
anyio = "^4.2.0"
pytest-tornasync = "^0.6.0.post2"
pytest-trio = "^0.8.0"
pytest-twisted = "^1.14.0"
twisted = "^23.10.0"
aioredis = "^2.0.1"
celery = "^5.3.6"
flower = "^2.0.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
